--- a/views/index.pug
+++ b/views/index.pug
@@ -1,14 +1,14 @@
 doctype html
-html(lang="en")
+html
     head
         title Page title
-        link(rel="stylesheet", href="/styles.css")
+        link(rel='stylesheet', href='/styles.css')
     body
         if username
-            h1 Hello, #{username}
+            h1 Hello, #{username}!
         else
             h1 Enter
-            form(method="POST")
-            input(type="text" name="username")
-            button(type="submit") Enter
+            form(method='POST')
+                input(type='text' name='username')
+                button(type='submit') Enter
         
