--- a/views/suggestions.pug
+++ b/views/suggestions.pug
@@ -1,6 +1,8 @@
 doctype html
 html
     head
+        meta(name='viewport' content='width=device-width, initial-scale=1.0')
+        meta(http-equiv='X-UA-Compatible' content='ie=edge')
         title Page title
         link(rel='stylesheet', href='/styles.css')
     body
@@ -8,6 +10,9 @@ html
 
         ul
             for suggestion in suggestions
-                li #{suggestion}
+                li
+                    a(href='/suggestions/${suggestion.id}')= suggestion.title
            
+           form(method="POST")
+                input(type="text" name='title' placeholder='Course title') aaa
         
