fix suggestions.pg ahref bug

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ html
     body
         if username
             h1 Hello, #{username}!
-            a(href='/suggestions') Suggestions list
+            a(href='/suggestions') See suggestions list
         else
             h1 Enter
             form(method='POST')
