--- a/views/suggestions.pug
+++ b/views/suggestions.pug
@@ -4,15 +4,16 @@ html
         meta(name='viewport' content='width=device-width, initial-scale=1.0')
         meta(http-equiv='X-UA-Compatible' content='ie=edge')
         title Page title
-        link(rel='stylesheet', href='/styles.css')
+        link(rel='stylesheet' href='/styles.css')
     body
         h1 Suggestions
 
         ul
             for suggestion in suggestions
                 li
-                    a(href='/suggestions/${suggestion.id}')= suggestion.title
+                    a(href=`/suggestions/${suggestion.id}`)= suggestion.title
            
-           form(method="POST")
-                input(type="text" name='title' placeholder='Course title') aaa
+        form(method="POST")
+            input(type="text" name='title' placeholder='Course title')
+            button(type="submit") Propose
         
