add vote form to suggestion.pug

--- a/views/suggestion.pug
+++ b/views/suggestion.pug
@@ -9,3 +9,6 @@ html
          a(href='/suggestions') Back
         
             h1= suggestion.title
+
+            form(method="POST")
+            button(type="submit") Vote
